feat: change from osm to google map

--- a/web/index.html
+++ b/web/index.html
@@ -30,6 +30,7 @@
     <link rel="icon" type="image/png" href="icons/icon.jpg" />
 
     <title>Digital Billboard</title>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCJiLgpoxvQm0TfxzHaXPQ_0Ew1ytii8n0"></script>
     <link rel="manifest" href="manifest.json" />
   </head>
   <body>
