--- a/web/index.html
+++ b/web/index.html
@@ -30,7 +30,10 @@
     <link rel="icon" type="image/png" href="icons/icon.jpg" />
 
     <title>Digital Billboard</title>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCJiLgpoxvQm0TfxzHaXPQ_0Ew1ytii8n0"></script>
+    <script src="google_maps_loader.js"></script>
+    <script>
+      loadGoogleMaps(String.fromEnvironment("GOOGLE_MAPS_API_KEY"));
+    </script>
     <link rel="manifest" href="manifest.json" />
   </head>
   <body>
